--- a/src/Containers/SongsList/SongsList.module.css
+++ b/src/Containers/SongsList/SongsList.module.css
@@ -1,6 +1,5 @@
 .SongsListContainer {
-    border: 1px solid #FFF;
-    padding-top: 80px;
+    padding-top: 30px;
     padding-bottom: 110px;
     display: flex;
     justify-content: center;
@@ -19,13 +18,17 @@
     color: rgb(231, 248, 255);
     font-size: 28px;
     margin: 0;
+    margin-bottom: 24px;
 }
 
 .SongList {
-    padding: 50px 0 70px 0;
+    padding: 30px 0 30px 0;
     margin: 0;
     list-style: none;
     width: 50%;
-    border: 1px solid #FFF;
     overflow-y: scroll;
+    background-color: #e6e6e6;
+    color: #000;
+    border: 2px solid #000;
+    border-radius: 5px;
 }
