--- a/src/Containers/SongsList/SongsListElement/SongsListElement.module.css
+++ b/src/Containers/SongsList/SongsListElement/SongsListElement.module.css
@@ -1,12 +1,24 @@
 .SongsListElement {
-    padding: 0 0 20px 0;
     margin: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 13px 0;
+}
+
+.SongsListElement:hover {
+    background-color: #000;
+    cursor: pointer;
+}
+
+.SongsListElement:hover .SongsListElementLink{
+    color: #FFF;
 }
 
 .SongsListElementLink {
     font-size: 1em;
-    color: #FFF;
+    color: #000;
+    font-weight: 500;
     text-decoration: none;
 }
 
