--- a/src/Components/UI/FormElement/FormElement.module.css
+++ b/src/Components/UI/FormElement/FormElement.module.css
@@ -1,5 +1,5 @@
 .FormElement {
-    padding: 15px;
+    padding: 0 15px 15px 15px;
     display: flex;
     flex-direction: column;
     justify-content: left;
