--- a/src/Containers/Player/Player.module.css
+++ b/src/Containers/Player/Player.module.css
@@ -2,4 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.PlayerPanelContainer {
+    padding: 20px 0;
+}
+
+.Button {
+    width: 120px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.Button:first-of-type {
+    margin-right: 20px;
 }
